--- a/css/Project.css
+++ b/css/Project.css
@@ -7,8 +7,7 @@
 	box-sizing: border-box;
 }
 /*Small Devices, Mobile*/
-@media screen and (max-width: 600px)
-{
+@media screen and (max-width: 600px){
 	
 
 .inner{
