--- a/css/Project.css
+++ b/css/Project.css
@@ -7,7 +7,7 @@
 	box-sizing: border-box;
 }
 /*Small Devices, Mobile*/
-@media screen and (max-width: 600px){
+@media screen and (min-width: 350px and max-width: 600px){
 	
 
 .inner{
