--- a/css/Project.css
+++ b/css/Project.css
@@ -7,7 +7,7 @@
 	box-sizing: border-box;
 }
 /*Small Devices, Mobile*/
-
+@media screen and (max-width: 600px){
 	
 
 .inner{
@@ -27,4 +27,4 @@
 	margin: 25%; 
 	margin-top: 75%;
 }
-
+}
