--- a/Project.css
+++ b/Project.css
@@ -12,7 +12,7 @@
 	
 
 .inner{
-	background-image: url("pics/paul-vincent.jpg");
+	background-image: url("pic/paul-vincent.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
