--- a/css/Project.css
+++ b/css/Project.css
@@ -7,7 +7,7 @@
 	box-sizing: border-box;
 }
 /*Small Devices, Mobile*/
-@media only screen and (max-width: 600px)
+@media only screen and (max-width: 320px and 600px)
 {
 	
 
